--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <FONT face =Arial size = 5><b>Главная Страница</b></font></align><br><br> <div>
 <table border 3>
 <tr><th colspan = 2 align = "center">Портфолио П(Ц)К естественнонаучных дисциплин и математики</th></tr>
-<tr><td><a href="./meropriatia.html">Участие в мероприятиях</a><br></br>
-<a href="./posobie.html">Методические пособия</a><br></br>
-<a href="./prepodavateli.html">Преподаватели</a>
+<tr><td><a href="src/meropriatia.html">Участие в мероприятиях</a><br></br>
+<a href="src/posobie.html">Методические пособия</a><br></br>
+<a href="src/prepodavateli.html">Преподаватели</a>
 </td>
-<td><img src = colleg.jpg width = 300 height =300></td>
+<td><img src = src/colleg.jpg width = 300 height =300></td>
 </tr>
 </table>
 </BODY>
