--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <a href="./src/posobie.html">Методические пособия</a><br></br>
 <a href="./src/prepodavateli.html">Преподаватели</a>
 </td>
-<td><img src = ./src/colleg.jpg width = 300 height =300></td>
+<td><img src = ./logo.png width = 300 height =300></td>
 </tr>
 </table>
 </BODY>
